test/classes/errors/nilability-assign/assign-nonnil-owned-from-oknil-owned.good
assign-nonnil-owned-from-oknil-owned.chpl:8: error: cannot assign to a non-nilable owned from a nilable owned
